--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
   <meta charset="uft-8">
-  <title>Blink</title>
+  <title>milk</title>
   <link rel="tylesheet" href="stylesheets.css">
   </head>
   <body>
     
     <div class="header">
-<div class="header-logo">Blink</div> 
+<div class="header-logo">milk</div> 
 <div class="header-list">
   <ul>
     <li>About</li>
