--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="uft-8">
   <title>milk</title>
-  <link rel="tylesheet" href="stylesheets.css">
+  <link rel="stylesheet" href="stylesheets.css">
   </head>
   <body>
     
